plugins {
    id 'java'
    id 'com.github.johnrengelman.shadow' version '7.1.2'
}

//dependencies {
//    implementation subprojects
//}

//allprojects {
//
//}

subprojects {
    apply plugin: 'java'

    compileJava.options.encoding = compileTestJava.options.encoding = "UTF-8"
    sourceCompatibility = targetCompatibility = JavaVersion.VERSION_18

    project.ext.jomlVersion = "1.10.5"

    repositories {
        mavenCentral()
    }

    dependencies {
        compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.24'
        annotationProcessor 'org.projectlombok:lombok:1.18.24'

        testCompileOnly 'org.projectlombok:lombok:1.18.24'
        testAnnotationProcessor 'org.projectlombok:lombok:1.18.24'
    }
}

jar {
    manifest {
        attributes 'Class-Path': configurations.runtimeClasspath.files.collect { it.getName() }.join(' '),
                'Main-Class': 'net.bfsr.core.Main',
                'Multi-Release': true//log4j2 workaround
    }
}